--- a/.github/actions/deploy-s3-javascript/action.yml
+++ b/.github/actions/deploy-s3-javascript/action.yml
@@ -1,7 +1,5 @@
 name: 'Deploy to AWS S3'
-description: 'Deploy a static website via AWS S3.'
-runs: 
+description: 'Deploy a static website to AWS S3.'
+runs:
   using: 'node16'
-  pre: ''
   main: 'main.js'
-  post: ''
